@@ -1,0 +1,2 @@
+Drop fields with obsolete URLs.
+Fixed-Lintian-Tags: obsolete-url-in-packaging
